added frontend home page containing all albums

--- a/Frontend/photo-album/src/index.css
+++ b/Frontend/photo-album/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.ui.container {
+  padding-top: 3em;
+  padding-bottom: 2em;
+}
